[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-monitoring"
version = "1.0.0"
description = "System monitoringu projektów legislacyjnych - RCL, Sejm i KPRM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary - All Rights Reserved"}
authors = [
    {name = "Kamil Mosoń"}
]
keywords = ["monitoring", "legislacja", "rcl", "sejm", "kprm", "poland", "parliament"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
monitor-rcl-projects = "horizon_monitoring.scripts.monitor_rcl_projects:main"
monitor-sejm-projects = "horizon_monitoring.scripts.monitor_sejm_projects:main"
monitor-rcl-tags = "horizon_monitoring.scripts.monitor_rcl_tags:main"
fetch-kprm-register = "horizon_monitoring.scripts.fetch_kprm_register:main"
analyze-kprm-register = "horizon_monitoring.scripts.analyze_kprm_register:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["horizon_monitoring*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=horizon_monitoring --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"

